--- a/styles.css
+++ b/styles.css
@@ -843,7 +843,7 @@ input:valid+label {
 
 .datosCreatePoll input:focus,
 input:valid {
-    border-bottom-color: #EDF2F4;
+    border-bottom-color: #8D99AE;
 }
 
 #numeroOpciones {
@@ -915,6 +915,9 @@ input:valid+label {
 #removeOption {
     background-color: #607D8B; /* Color de fondo azul gris */
 }
+
+
+
 
 
 
