--- a/styles.css
+++ b/styles.css
@@ -963,6 +963,15 @@ td:nth-child(4) {
 }
 /* Otros estilos CSS existentes */
 
+/* ---------------------------------------------------- */
+/* details_page.PHP */
+#chart_div{
+    margin-top: 100px;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 
 /* ---------------------------------------------------- */
