--- a/styles.css
+++ b/styles.css
@@ -976,20 +976,36 @@ td:nth-child(4) {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 100px 0 100px 0;
+    margin: 120px 0 100px 0;
     justify-content: center;
     height: 100vh;
 }
 
 .pregunta {
     margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
 }
 
 #chart_div {
     width: 80%;
     margin: auto;
 }
+#imgDetailsPage{
+    width: 200px;
+    height: 200px; 
+    justify-content: center;
+    align-items: center;
+}
+#divImgDetailsPage{
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#divH1{
+    width: 900px;
+}
 /* ---------------------------------------------------- */
 /* INVITE_POLL.PHP */
 
