--- a/styles.css
+++ b/styles.css
@@ -1114,3 +1114,23 @@ footer a:hover {
 
 
 
+
+/* ---------------------------------------------------- */
+/* SHOWVOTES.PHP */
+
+.listPollContainer {
+    width: 80%; /* Ajusta el ancho de la tabla al 80% del contenedor */
+    margin: 0 auto; /* Centra la tabla horizontalmente */
+}
+
+.listPollContainer table {
+    width: 100%; /* Asegura que la tabla ocupe todo el ancho del contenedor */
+}
+
+.question-column {
+    width: 60%; /* Ajusta el ancho de la columna de la pregunta */
+}
+
+.option-text {
+    width: 40%; /* Ajusta el ancho de la columna de la opción */
+}
