commit show votes

--- a/styles.css
+++ b/styles.css
@@ -1118,12 +1118,12 @@ footer a:hover {
 /* ---------------------------------------------------- */
 /* SHOWVOTES.PHP */
 
-.listPollContainer {
+.listVotesContainer {
     width: 80%; /* Ajusta el ancho de la tabla al 80% del contenedor */
     margin: 0 auto; /* Centra la tabla horizontalmente */
 }
 
-.listPollContainer table {
+.listVotesContainer table {
     width: 100%; /* Asegura que la tabla ocupe todo el ancho del contenedor */
 }
 
@@ -1133,4 +1133,32 @@ footer a:hover {
 
 .option-text {
     width: 40%; /* Ajusta el ancho de la columna de la opción */
+}
+
+.state-column {
+    width: 40%; /* Ajusta el ancho de la columna de la estado */
+}
+
+.poll-state.not-started {
+    color: rgb(255, 255, 255);
+    border:solid rgb(255, 255, 255) 2px;
+    background-color:orange ;
+    padding: 0.25rem;
+    border-radius: 9999px;
+}
+
+.poll-state.finished {
+    color: rgb(255, 255, 255);
+    border:solid rgb(255, 255, 255) 2px;
+    background-color:red;
+    padding: 0.25rem;
+    border-radius: 9999px;
+}
+
+.poll-state.active {
+    color: rgb(255, 255, 255);
+    border:solid rgb(255, 255, 255) 2px;
+    background-color: green ;
+    padding: 0.25rem;
+    border-radius: 9999px;
 }
